k8s-spawned/manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: askrike-ai-v8gfssky
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: askrike-ai-v8gfssky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      serviceAccountName: todo-api-sa
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: '0'
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: todo-api
        image: ghcr.io/ludsil/todo:nonroot
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: askrike-ai-v8gfssky
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
